--- a/MovieApp/StoryBoard/MovieDetail.storyboard
+++ b/MovieApp/StoryBoard/MovieDetail.storyboard
@@ -17,7 +17,7 @@
                         <rect key="frame" x="0.0" y="0.0" width="390" height="844"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tMC-Fd-lOs">
+                            <imageView clipsSubviews="YES" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="tMC-Fd-lOs">
                                 <rect key="frame" x="0.0" y="47" width="390" height="390"/>
                                 <constraints>
                                     <constraint firstAttribute="width" secondItem="tMC-Fd-lOs" secondAttribute="height" id="Hk7-Qb-vDn"/>
